# octo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/core/: CMakeLists.txt  Tab.cpp  Tab.h  Window.cpp  Window.h
src/gui/: CMakeLists.txt  browserwindow.cpp  browserwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  navbar.cpp  navbar.h  navbarbutton.cpp  navbarbutton.h  tabbar.cpp  tabbar.h  tabpage.cpp  tabpage.h
src/gui/delegates/: tabbutton.cpp  tabbutton.h
src/gui/resources/: general.qss  resources.qrc
src/htmlparser/: CMakeLists.txt
src/htmlparser/include/htmlparser/: input_preprocessor.h  lexer.h  token.h  unicode.h
src/htmlparser/src/: input_preprocessor.cpp  lexer.cpp  token.cpp  unicode.cpp
src/models/: OctoInstanceModel.cpp  OctoInstanceModel.h
src/octocore/: CMakeLists.txt
src/octocore/include/octocore/: debug.h
src/resources/: resources.qrc
src/resources/styles/: global.qss
src/utils/: utils.cpp  utils.h
src/webcore/: CMakeLists.txt
src/webcore/include/dom/: document.h  domstring.h  domtokenlist.h  element.h  node.h  text.h  usvstring.h
src/webcore/include/html/: htmlanchorelement.h  htmlbodyelement.h  htmlbuttonelement.h  htmldivelement.h  htmlelement.h  htmlformelement.h  htmlheadingelement.h  htmlimageelement.h  htmlinputelement.h  htmllinkelement.h  htmlparagraphelement.h  htmlspanelement.h  htmlstyleelement.h  htmltitleelement.h  htmlunknownelement.h  tagname.h
src/webcore/include/htmlparser/: lexer.h  lexer_impl.h  token.h  treebuilder.h  treebuilder_impl.h  treebuilder_token.h
src/webcore/include/internal/: generic_input_stream.h
src/webcore/include/webcore/css/: cssomstring.h  cssrule.h  cssrulelist.h  cssstyledeclaration.h  cssstylerule.h  cssstylesheet.h  propertyid.h  propertymap.h  selector.h  selectorlist.h
src/webcore/include/webcore/css/properties/: property.h
src/webcore/include/webcore/css/values/: colorvalue.h  sizevalue.h  traits.h  value.h  value_cast.h  widekeywordvalue.h
src/webcore/include/webcore/dom/: attr.h  attrlist.h  document.h  domstring.h  domtokenlist.h  element.h  node.h  nodefilter.h  nodelist.h  text.h  treewalker.h  usvstring.h
src/webcore/include/webcore/html/: collection.h  htmlanchorelement.h  htmlbodyelement.h  htmlbuttonelement.h  htmldivelement.h  htmlelement.h  htmlformelement.h  htmlheadelement.h  htmlheadingelement.h  htmlhtmlelement.h  htmlimageelement.h  htmlinputelement.h  htmllinkelement.h  htmlparagraphelement.h  htmlspanelement.h  htmlstyleelement.h  htmltitleelement.h  htmlunknownelement.h  tagname.h
src/webcore/include/webcore/internal/: check.h  generic_input_stream.h
src/webcore/include/webcore/internal/cssparser/: lexer.h  parser.h  propertyidparser.h  propertyvalueparser.h  selectorparser.h  token.h  tokenstream.h
src/webcore/include/webcore/internal/generic/: inputstream.h
src/webcore/include/webcore/internal/htmlparser/: jsonserializeddom.h  lexer.h  lexer_impl.h  treebuilder.h  treebuilder_impl.h  treebuilder_token.h
src/webcore/include/webcore/internal/styleengine/: computedstyle.h  propertysignificancescore.h  stylebuilder.h  styleengine.h  stylerulematcher.h  stylesheetlist.h
src/webcore/include/webcore/internal/visitor/: domvisitor.h
src/webcore/scripts/: css_properties.json  generate_properties.py  generate_property_data.py  generate_property_id.py
src/webcore/scripts/templates/: css_longhand_property.h.txt  css_property_data.cpp.txt  css_property_data.h.txt  css_property_id.h.txt  css_shorthand_property.h.txt
src/webcore/src/: CMakeLists.txt  check.h
src/webcore/src/css/: CMakeLists.txt  cssrule.cpp  cssrulelist.cpp  cssstyledeclaration.cpp  cssstylesheet.cpp  propertymap.cpp  selector.cpp  selectorlist.cpp
src/webcore/src/css/properties/: CMakeLists.txt  css_properties.json  longhands.cpp  shorthands.cpp
src/webcore/src/cssparser/: lexer.cpp  lexer.h  lexer_test.cpp  token.cpp  token.h
src/webcore/src/dom/: CMakeLists.txt  attr.cpp  attrlist.cpp  document.cpp  element.cpp  node.cpp  nodelist.cpp  text.cpp  treewalker.cpp
src/webcore/src/html/: CMakeLists.txt  collection.cpp  htmlanchorelement.cpp  htmlbodyelement.cpp  htmlbuttonelement.cpp  htmldivelement.cpp  htmlelement.cpp  htmlformelement.cpp  htmlheadelement.cpp  htmlheadingelement.cpp  htmlhtmlelement.cpp  htmlimageelement.cpp  htmlinputelement.cpp  htmllinkelement.cpp  htmlparagraphelement.cpp  htmlspanelement.cpp  htmlstyleelement.cpp  htmltitleelement.cpp  htmlunknownelement.cpp  tagname.cpp
src/webcore/src/htmlparser/: input_preprocessor.cpp  input_preprocessor_test.cpp  lexer.cpp  lexer.h  lexer_impl.cpp  lexer_impl.h  lexer_test.cpp  preprocessor.cpp  preprocessor.h  preprocessor_test.cpp  token.cpp  token.h  treebuilder.cpp  treebuilder.h  treebuilder_impl.cpp  treebuilder_impl.h  treebuilder_token.cpp  treebuilder_token.h  unicode.cpp  unicode.h
src/webcore/src/internal/: CMakeLists.txt  generic_input_stream.cpp
src/webcore/src/internal/cssparser/: CMakeLists.txt  lexer.cpp  lexer_test.cpp  parser.cpp  parser_test.cpp  propertyidparser.cpp  propertyidparser_test.cpp  propertyvalueparser.cpp  propertyvalueparser_test.cpp  selectorparser.cpp  selectorparser_test.cpp  token.cpp  tokenstream.cpp  tokenstream_test.cpp
src/webcore/src/internal/generic/: CMakeLists.txt  inputstream.cpp  inputstream_test.cpp
src/webcore/src/internal/htmlparser/: CMakeLists.txt  jsoncompare.hpp  jsonserializeddom.cpp  lexer.cpp  lexer_impl.cpp  lexer_test.cpp  snapshots.dom.h  token.cpp  treebuilder.cpp  treebuilder_impl.cpp  treebuilder_test.cpp  treebuilder_token.cpp
src/webcore/src/internal/styleengine/: CMakeLists.txt  computedstyle.cpp  propertysignificancescore.cpp  stylebuilder.cpp  styleengine.cpp  styleengine_test.cpp  stylerulematcher.cpp
src/widgets/: navbar.cpp  navbar.h
